frontend/test/should_fail/from_storage_006.grg
using from_storage;

test t2(ref m:map<Node, Node>)
{
	x:Node<m[y]>;
	y:Node<m[x]>;
}

